sassi-macros/tests/lihaaf/compile_fail/wire_portable_serde_json_value.stderr
error[E0277]: the trait bound `sassi::__private::serde_json::value::Value: SassiWire` is not satisfied
  --> $DIR/wire_portable_serde_json_value.rs:10:14
   |
10 |     payload: serde_json::Value,
   |              ^^^^^^^^^^^^^^^^^ the trait `SassiWire` is not implemented for `sassi::__private::serde_json::value::Value`
   |
   = help: the following other types implement trait `SassiWire`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 62 others
note: required by a bound in `__sassi_assert_wire_component`
  --> $DIR/wire_portable_serde_json_value.rs:5:48
   |
 5 | #[derive(Debug, Clone, Serialize, Deserialize, Cacheable)]
   |                                                ^^^^^^^^^ required by this bound in `__sassi_assert_wire_component`
   = note: this error originates in the derive macro `Cacheable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
